# hug

./: .gitignore  README.md  environment.yaml  pyproject.toml
assets/: mano_rhand_shape.npy  norm_stats.json
data/custom/: intrinsics.txt
data/hug_bench/: large_1.pkl  large_2.pkl  large_3.pkl  large_4.pkl  large_5.pkl  large_6.pkl  medium_1.pkl  medium_2.pkl  medium_3.pkl  medium_4.pkl  medium_5.pkl  medium_6.pkl  small_1.pkl  small_2.pkl  small_3.pkl  small_4.pkl  small_5.pkl  small_6.pkl
src/: app.py  inference.py  prepare_inputs.py  visualize_predictions.py
src/dataloader/: data_classes.py  grasp_dataset.py
src/models/: encoders.py  fusion.py  grasp_flow.py  grasp_model.py  mano.py  pointnext.py  transformer.py
src/utils/: data_keys.py  pcl_utils.py  transform_utils.py  viser_utils.py  visualization_utils.py
